tests/negative/Internal/UnsolvedMeta.juvix
module UnsolvedMeta;

type Proxy (A : Type) :=
  | x : Proxy A;

t : Proxy _;
t := x;

